temp fix for overflow issue, fixed songInfo text resizing on hover

--- a/app/components/Song/Song.css
+++ b/app/components/Song/Song.css
@@ -6,7 +6,7 @@
 .song {
   background-color: white;
   width: 70%;
-  height: auto;
+  height: 50px; /* don't use a phone sized screen until we get the overflow issue solved */
   margin: 0 auto;
   padding-left: 1%;
   padding-top: 0.5%;
@@ -14,8 +14,9 @@
   border-left: 5px solid red; /* youtube red, base off source later */
   border-right: 1px solid #a3a3a3;
   opacity: 0.8;
-  overflow: hidden;
+  /* overflow: hidden; --fixes the artist cutoff issue but introduces others. */
   float: center;
+  display: run-in;
 }
 
 .song:hover {
@@ -35,6 +36,15 @@
   transition: all .5s ease-in-out;
 }
 
+.song:hover .title {
+  transform: scaleY(0.7);
+}
+
+.song:hover .artist {
+  font-size: 110%;
+  transform: scaleY(0.7);
+}
+
 .upvoteButton {
     opacity: 0.25;
 }
@@ -49,7 +59,6 @@
 }
 
 .title {
-    font-weight: normal;
     font-size: 150%;
     margin-bottom: 0;
     padding-bottom: 0;
